--- a/TODO
+++ b/TODO
@@ -8,3 +8,4 @@ Filter out BEL characters
 Use register/require for running rt/* hooks in main.c (instead of setting a global variable)
 Keep track of nickname's access across MODE changes
 Show nickname's access in messages
+Log using a litterbox frontend (no textual logging)
