--- a/TODO
+++ b/TODO
@@ -9,4 +9,4 @@ Use register/require for running rt/* hooks in main.c (instead of setting a glob
 Keep track of nickname's access across MODE changes
 Show nickname's access in messages
 Log using a litterbox frontend (no textual logging)
-Make ignores/filtering/dimming builtin
+SASL PLAIN/EXTERNAL
