--- a/TODO
+++ b/TODO
@@ -10,3 +10,5 @@ Keep track of nickname's access across MODE changes
 Show nickname's access in messages
 Log using a litterbox frontend (no textual logging)
 SASL PLAIN/EXTERNAL
+Different command prefix to print command output in current buffer vs main buffer
+	- maybe /:command for current buffer and /command for main buffer?
