--- a/TODO
+++ b/TODO
@@ -8,7 +8,11 @@ Filter out BEL characters
 Use register/require for running rt/* hooks in main.c (instead of setting a global variable)
 Keep track of nickname's access across MODE changes
 Show nickname's access in messages
-Log using a litterbox frontend (no textual logging)
 SASL PLAIN/EXTERNAL
 Different command prefix to print command output in current buffer vs main buffer
 	- maybe /:command for current buffer and /command for main buffer?
+Add WALLOPS support
+Keep track of channel's TOPIC
+Fix: escape channel names when writing logs (#!/bin/mksh.txt is invalid)
+Fix: redirect ChanServ messages that begin with "[#channel]" to the proper buffer
+Switch to ncurses
