--- a/TODO
+++ b/TODO
@@ -1,18 +1,35 @@
-Fix support for inputting multi-byte Unicode codepoints
-Support for multi-codepoint Unicode graphemes
-Support for mouse input (switching buffers, highlighting messages, etc)
-Show netsplits/netjoins as a single message (to avoid clogging buffers)
-Implement italics and blink for termbox
-Add undo, completion support to the termbox readline module
-Filter out BEL characters
-Use register/require for running rt/* hooks in main.c (instead of setting a global variable)
+Simple fixes
+------------
+escape channel names when writing logs (#!/bin/mksh.txt is invalid)
+redirect ChanServ messages that begin with "[#channel]" to the proper buffer
+
+Difficult fixes
+---------------
+add messages to unread if away
 Keep track of nickname's access across MODE changes
+fix support for inputting multi-byte Unicode codepoints
+fix the hundres of bugs present in the inputline code
+
+New features
+------------
+add support for: WALLOPS, 322, 367, 368, 698
+add commands for: /list, /quiet
+last-read-message indicator
 Show nickname's access in messages
-SASL PLAIN/EXTERNAL
+Add undo, completion support to the termbox readline module
+
+Long-term ideas/features
+------------------------
+Switch to ncurses
+multi-server
 Different command prefix to print command output in current buffer vs main buffer
 	- maybe /:command for current buffer and /command for main buffer?
-Add WALLOPS support
-Keep track of channel's TOPIC
-Fix: escape channel names when writing logs (#!/bin/mksh.txt is invalid)
-Fix: redirect ChanServ messages that begin with "[#channel]" to the proper buffer
-Switch to ncurses
+Show netsplits/netjoins as a single message (to avoid clogging buffers)
+Support for mouse input (switching buffers, highlighting messages, etc)
+Support for multi-codepoint Unicode graphemes
+
+Code hygiene
+------------
+test suite for bookkeeping
+tests for util.fold
+manpage
